[Polyam] fix: Fix popover/dialog backgrounds not blurred on older Webkit browsers
Port e8a603b18f80a44a68087e4f9a959de1ec773d3b to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/accounts/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts/accounts.scss
@@ -62,7 +62,7 @@
 
     &__popout {
       background: var(--dropdown-background-color);
-      backdrop-filter: var(--background-filter);
+      backdrop-filter: $backdrop-blur-filter;
       border: 1px solid var(--dropdown-border-color);
       box-shadow: var(--dropdown-shadow);
       max-width: 320px;
